fix alignment

--- a/css/home.css
+++ b/css/home.css
@@ -43,7 +43,7 @@ hr {
 
 header {
   background: #fff;
-  padding: 24px;
+  padding: 0px;
   box-shadow: 0 1px 10px 3px #a7a5a5;
   position: sticky;
   top: 0;
@@ -388,7 +388,7 @@ footer .footer_p {
 
 @media (min-width: 600px) {
   header {
-    padding: 24px 48px;
+    padding: 0;
   }
 
   header nav .hamb {
@@ -508,34 +508,36 @@ footer .footer_p {
 
 @media (min-width: 768px) {
   header {
-    padding: 24px 72px;
+    padding: 0x;
   }
   .social ul {
     background-color: #272a31;
-    height: px;
     text-align: right;
-    padding-top: 8px;
+    padding-top: 2px;
     list-style: none;
     margin: 0;
-    padding-right: 10%;
     width: 100%;
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
+    height: 30px;
+    border-radius: 0px
+    padding: 0 11%;
+    gap: 1.5rem;
   }
 
   .social ul li {
     font-family: var(--font-family);
     color: white;
-    padding-right: 10px;
-    display: inline-block;
+    padding-right: 0px 198px 0px 209px;
+    gap: 232px;
   }
 
   .social li:hover {
     color: #ec5242;
   }
 
-  .head {
+  .header {
     padding: 10rem 72px;
   }
 
@@ -609,19 +611,19 @@ footer .footer_p {
     line-height: 32px;
   }
 
-  .prg1 {
+  .prog {
     align-items: center;
     text-align: center;
     margin-top: 5%;
     margin-bottom: 40px;
   }
 
-  .prg1 {
+  .prog {
     align-items: center;
     text-align: center;
   }
 
-  .program1 {
+  .program {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     color: white;
@@ -808,7 +810,13 @@ footer .footer_p {
 
 @media (min-width: 1400px) {
   header {
-    padding: 24px 120px;
+  height: 75px;
+  width: 1440px;
+  left: 0px;
+  top: 30px;
+  border-radius: 0px;
+  padding: 0px 198px 0px 209px;
+
   }
 
   .head {
